# cerberus

./: .dist.gitignore  .gitignore  .golangci.yaml  CLAUDE.md  Caddyfile  LICENSE.anubis.md  LICENSE.md  README.md  build.sh  caddyfile.go  cerberus.go  config.go  devenv.nix  devenv.yaml  directives.go  go.mod  go.sum  handler.go  instances.go  ip.go  ip_test.go  page.templ  page_templ.go
.cargo/: config.toml
.github/workflows/: build-dist.yaml  build.yaml  issue-manager.yml  lint.yaml  test.yaml
core/: config.go  config_test.go  const.go  instance.go  pool.go  state.go  state_test.go
directives/: app.go  caddyfile.go  common.go  endpoint.go  i18n.go  middleware.go
embed/: embed.go
internal/expiremap/: expiremap.go
internal/ipblock/: ipblock.go  ipblock_test.go
internal/oncecell/: oncecell.go
internal/randpool/: randpool.go
js/: main.mjs  proof-of-work.mjs
pow/: .gitignore  Cargo.toml
pow/src/: blake3.rs  check_dubit.rs  check_nibble.rs  lib.rs  solver.rs
pow/src/blake3/: loop_macros.rs  simd128.rs
pow/src/solver/: scalar.rs  simd128.rs
translations/: en.yaml  ko.yaml  zh.yaml
web/: embed.go  global.css  index.html  index.templ  index_templ.go  manifest.go  package.json  page.templ  page_templ.go  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.mjs
web/js/: assets.mjs  blake3.js  bootstrap.js  collect_assets.mjs  convert.js  main.mjs  package.json  pnpm-lock.yaml  pow.js.worker.js  pow.mjs  pow.worker.js  proof-of-work.mjs  webpack.config.js
web/js/icu/: compiled.mjs
web/tests/: Caddyfile  cerberus.spec.ts
